<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mensaje"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/tvFrase"
        style="@style/viewCustom"
        android:layout_below="@+id/ivBanner"
        android:gravity="center_horizontal"
        android:paddingTop="26dp"
        android:text="@string/mens"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBanner" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/white"
        android:hint="@string/mensa"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrase" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/viewCustom"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:onClick="login"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/Reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>